--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ nav{
     font-size: 1.4em;
 }
 .hindex a{
+    margin: 10px;
     font-size: 1.5em;
     text-decoration: none;
     color: white;
