troca de imagem

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ nav{
     transition: 0.4s;
 }
 .hindex{
-    background-image: url(escocia.jpg);
+    background-image: url(escocia5.jpg);
     height: 440px;
     background-size: cover;
     background-position: center center;
